--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "start": "astro preview"
+    "start": "astro preview --host 0.0.0.0 --port $PORT"
   },
   "dependencies": {
     "astro": "^5.5.5"
